package com.great.factorymethod.Common;

public interface View {
    public double getWidth();
    public double getHeight();
    public void draw();
}
