package com.great.factorymethod.Common;

public interface ViewCreator {
    public View createView();
}
